# rosbot_xl_ros

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .wordlist.txt  DEV_GUIDE.md  Dockerfile  Dockerfile.hardware  Dockerfile.simulation  LICENSE.txt  LICENSE_MIT.txt  README.md  ROS_API.md  ros_entrypoint.sh  wordlist.dic
.devcontainer/: Dockerfile_template  devcontainer_template.json
compose_pc/: compose.lan.yml  compose.yml  cyclonedds.xml  rosbot_pro.rviz  rosbot_xl.rviz
compose_robot/: .env  Dockerfile  compose-copy.yaml  compose.husarnet.rosbot.yaml  compose.lan.yaml  compose.microros.old.yaml  compose.yaml  cyclonedds.xml  ros_entrypoint.sh
config/: amcl_params.yaml  nav2_params.yaml  nav2_params_pure_pursuit.yaml  navigate_w_recovery.xml  slam_toolbox_params.yaml
demo/: .env  compose.pc-nvidia.yaml  compose.pc.husarnet.yaml  compose.pc.lan.yaml  compose.pc.yaml  compose.rosbot.hardware.yaml  compose.rosbot.husarnet.yaml  compose.rosbot.lan.yaml  compose.rosbot.localization.yaml  compose.rosbot.mapping.yaml  compose.rosbot.yaml  compose.rviz.lan.yaml  compose.rviz.yaml  compose.simulation.yaml  (+5 more)
rosbot_xl/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosbot_xl_hardware.repos  rosbot_xl_simulation.repos
rosbot_xl_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_xl_bringup/config/: ekf.yaml  laser_filter.yaml
rosbot_xl_bringup/launch/: bringup.launch.py  combined.launch.py  microros.launch.py
rosbot_xl_bringup/test/: bringup_test_node.py  test_diff_drive_ekf.py  test_diff_drive_ekf_and_scan.py  test_mecanum_ekf.py  test_mecanum_ekf_and_scan.py  test_multirobot_ekf_and_scan.py  test_namespaced_diff_drive_ekf_and_scan.py  test_namespaced_mecanum_ekf_and_scan.py  test_scan_filter.py  test_utils.py
rosbot_xl_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_xl_controller/config/: diff_drive_controller.yaml  mecanum_drive_controller.yaml
rosbot_xl_controller/launch/: controller.launch.py
rosbot_xl_controller/test/: controllers_test_node.py  test_diff_drive_controllers.py  test_flake8.py  test_mecanum_controllers.py  test_multirobot_controllers.py  test_namespaced_diff_drive_controllers.py  test_namespaced_mecanum_controllers.py  test_utils.py  test_xacro.py
rosbot_xl_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_xl_description/meshes/: body.dae  body_colision.stl  mecanum_a.dae  mecanum_b.dae  wheel_a.dae  wheel_b.dae
rosbot_xl_description/meshes/components/: antenna.dae  antenna_connector.dae  antenna_top.dae  camera_mount_bot.dae  camera_mount_mid.dae  camera_mount_top.dae
rosbot_xl_description/models/rosbot_xl/: model.config  rosbot_xl.urdf.xacro
rosbot_xl_description/models/rosbot_xl_base/: body.urdf.xacro  plugins.gazebo.xacro  wheel.urdf.xacro
rosbot_xl_description/models/rosbot_xl_components/: model.config  slamtec_s1.ign.xacro
rosbot_xl_description/models/rosbot_xl_components/meshes/: slamtec_s1.stl
rosbot_xl_description/urdf/: body.urdf.xacro  gazebo.urdf.xacro  rosbot_xl.urdf.xacro  rosbot_xl_macro.urdf.xacro  rosbot_xl_realsense.urdf.xacro  rosbot_xl_velodyne.urdf.xacro  webots.urdf.xacro  wheel.urdf.xacro
rosbot_xl_description/urdf/components/: antenna.urdf.xacro  camera_mount.urdf.xacro  d435.urdf.xacro  intel_realsense_d435.urdf.xacro
rosbot_xl_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
rosbot_xl_gazebo/config/: controllers.yaml  diff_drive_controller.yaml  gz_intel_realsense_d435_remappings.yaml  gz_orbbec_astra_remappings.yaml  gz_slamtec_rplidar_remappings.yaml  gz_stereolabs_zed_remappings.yaml  gz_velodyne_puck_remappings.yaml  mecanum_drive_controller.yaml
rosbot_xl_gazebo/launch/: sim.launch.py  simulation.launch.py  spawn.launch.py
rosbot_xl_gazebo/test/: simulation_test_node.py  test_diff_drive_simulation.py  test_ign_kill_utils.py  test_mecanum_simulation.py  test_multirobot_diff_drive_simulation.py  test_multirobot_mecanum_simulation.py  test_namespaced_diff_drive_simulation.py  test_namespaced_mecanum_simulation.py  test_slamtec_rplidar_a2.py  test_slamtec_rplidar_a3.py  test_slamtec_rplidar_s1.py  test_utils.py
rosbot_xl_utils/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
rosbot_xl_utils/rosbot_xl_utils/: flash-firmware.py  flash_firmware.py
src/rosbot_xl/: CMakeLists.txt  package.xml  rosbot_xl_hardware.repos  rosbot_xl_simulation.repos
src/rosbot_xl_description/: CMakeLists.txt  package.xml
src/rosbot_xl_description/config/: controllers.yaml  controllers_gazebo.yaml
src/rosbot_xl_description/env-hooks/: rosbot_xl_description.dsv.in
src/rosbot_xl_description/launch/: description.launch.py  rviz2_preview.launch.py
src/rosbot_xl_description/models/rosbot_xl/: rosbot_xl.urdf.xacro
src/rosbot_xl_description/models/rosbot_xl_base/: body.urdf.xacro  model.config  plugins.gazebo.xacro  plugins.ign.xacro  rosbot_xl_macro.urdf.xacro  wheel.urdf.xacro
src/rosbot_xl_description/models/rosbot_xl_base/components/: rplidar_s1.gazebo.xacro
src/rosbot_xl_description/models/rosbot_xl_base/meshes/: body.dae  wheel_a.dae  wheel_b.dae
src/rosbot_xl_description/models/rosbot_xl_components/: slamtec_s1.ign.xacro
src/rosbot_xl_description/rviz/: rosbot_xl.rviz  rosbot_xl_demo.rviz
src/rosbot_xl_gazebo/: CMakeLists.txt  package.xml
src/rosbot_xl_gazebo/config/: controllers.yaml
src/rosbot_xl_gazebo/launch/: rviz2.launch.py  sim.launch.py  spawn_robot.launch.py  world.launch.py
src/rosbot_xl_gazebo/worlds/: turtlebot_playground.world
src/rosbot_xl_hardware/: CMakeLists.txt  package.xml  rosbot_xl_hardware.xml
src/rosbot_xl_hardware/config/: diff_drive_controller.yaml  mecanum_drive_controller.yaml
src/rosbot_xl_hardware/include/rosbot_xl_hardware/: rosbot_xl_imu_sensor.hpp  rosbot_xl_system.hpp  visibility_control.hpp
src/rosbot_xl_hardware/launch/: controller.launch.py  diff_drive.launch.py  mecanum_drive.launch.py
src/rosbot_xl_hardware/rosbot_xl_hardware/: repub_imu_msg.py
src/rosbot_xl_hardware/src/: rosbot_xl_imu_sensor.cpp  rosbot_xl_system.cpp
(+79 files in other folders)
