<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl</name>
  <version>0.8.12</version>

  <description>Meta package that contains all packages of ROSbot XL</description>
  <license>Apache License 2.0</license>

  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
  <author email="nikolas.duc@husarion.com">Nikolas Duc</author>
  <author email="dominik.nowak@husarion.com">Dominik Nowak</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosbot_xl_bringup</depend>
  <depend>rosbot_xl_description</depend>
  <depend>rosbot_xl_controller</depend>

  <depend condition="$HUSARION_ROS_BUILD == simulation">rosbot_xl_gazebo</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
