<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_controller</name>
  <version>0.8.12</version>

  <description>Hardware configuration for ROSbot XL</description>
  <license>Apache License 2.0</license>

  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <maintainer email="support@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <exec_depend>rosbot_xl_description</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>mecanum_drive_controller</exec_depend>

  <exec_depend>rosbot_hardware_interfaces</exec_depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_pytest</test_depend>

  <test_depend>xacro</test_depend>
  <test_depend>sensor_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>

  <test_depend>rosbot_xl_description</test_depend>
  <test_depend>ros_components_description</test_depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>joint_state_broadcaster</test_depend>
  <test_depend>imu_sensor_broadcaster</test_depend>
  <test_depend>diff_drive_controller</test_depend>
  <test_depend>mecanum_drive_controller</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
