<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Used https://github.com/colcon/colcon-bundle/blob/master/integration/test_workspace/src/test-nodes/package.xml -->
<package format="3">
  <name>rosbot_xl_description</name>
  <version>0.11.5</version>

  <description>The rosbot_xl_description package</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>
  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_components_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
