<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_gazebo</name>
  <version>0.1.1</version>

  <description>The rosbot_xl_gazebo package</description>
  <license>Apache License 2.0</license>

  <author email="maciej.stepien@husarion.com">Maciej Stępień</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <maintainer email="contact@husarion.com">Husarion</maintainer>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosbot_xl_description</build_depend>

  <exec_depend>rosbot_xl_description</exec_depend>

  <!-- Ignition Fortress -->
  <exec_depend>ignition-gazebo6</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ignition-plugin</exec_depend>

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>pluginlib</exec_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>