<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- Used https://github.com/colcon/colcon-bundle/blob/master/integration/test_workspace/src/test-nodes/package.xml -->
<package format="3">
  <name>rosbot_xl_gazebo</name>
  <version>0.11.5</version>

  <description>Gazebo Ignition simulation for ROSbot XL</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <author email="maciej.stepien@husarion.com">Maciej Stępień</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>rosbot_xl_bringup</exec_depend>
  <exec_depend>husarion_gz_worlds</exec_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <!-- Ignition dependency is specified in the ros_gz_sim package,
    version can chosen using GZ_VERSION (or IGNITION_VERSION) env variable,
    for details refer to the ros_gz_sim package -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>rclpy</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>launch_testing</test_depend>

  <test_depend>python3-psutil</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>sensor_msgs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
