<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_utils</name>
  <version>0.11.5</version>
  <description>Utilities for ROSbot XL</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>

  <exec_depend>launch_ros</exec_depend>

  <exec_depend>python3-sh</exec_depend>
  <exec_depend>python-periphery-pip</exec_depend>
  <exec_depend>python3-pyftdi-pip</exec_depend>
  <exec_depend>usbutils</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
