<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl</name>
  <version>2.4.0</version>
  <description>Meta package that contains all essential packages of MoveIt 2</description>
  <maintainer email="dominik.nowak@husarion.com">Dominik Nowak</maintainer>
  <maintainer email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</maintainer>
  <maintainer email="nikolas.duc@husarion.com">Nikolas Duc</maintainer>
  <maintainer email="maciej.stepien@husarion.com">Maciej Stepien</maintainer>

  <license>BSD</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_xl_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_xl_ros/issues</url>

  <author email="dominik.nowak@husarion.com">Dominik Nowak</author>
  <author email="krzysztof.wojciechowski@husarion.com">Krzysztof Wojciechowski</author>
  <author email="nikolas.duc@husarion.com">Nikolas Duc</author>
  <author email="maciej.stepien@husarion.com">Maciej Stepien</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbot_xl_bringup</exec_depend>
  <exec_depend>rosbot_xl_description</exec_depend>
  <exec_depend>rosbot_xl_ekf</exec_depend>
  <exec_depend>rosbot_xl_hardware</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
