<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_xl_hardware</name>
  <version>1.0.0</version>
  <description>Hardware configuration for ROSbot XL</description>
  <maintainer email="contact@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rosbot_xl_description</exec_depend>
  <exec_depend>rosbot_hardware_interfaces</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
